[REFACTOR] HyDE/embed executor 가상 스레드 전환